# jesd-eye-scan-gtk

./: CMakeLists.txt  LICENSE.txt  README.md  cmake_linux_packaging.cmake  jesd.glade  jesd204_topology.c  jesd204_topology.md  jesd_common.c  jesd_common.h  jesd_eye_scan.c  jesd_eye_scan.desktop  jesd_eye_scan.desktop.in  jesd_eye_scan_autostart.sh  jesd_status.c  makefile
.github/scripts/: create_debian.sh  verify_install.sh
.github/workflows/: build.yml
packaging/debian/: changelog  control  copyright  rules
